--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <link rel="icon" href="%PUBLIC_URL%assets/appmainlogo.png" style="background: #000;" />
 
-  <meta property="og:image" content="assets/appmainlogo.png" />
+  <meta property="og:image" content="%PUBLIC_URL%assets/appmainlogo.png" />
   <meta property="og:description"
     content="Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%assets/appmainlogo.png" />
   <link rel='canonical' href='https://ethersmasterpiece.com' />
   <!--
       manifest.json provides metadata used when your web app is installed on a
