--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,19 @@
   <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
   <link rel="icon" href="%PUBLIC_URL%assets/appmainlogo.png" style="background: #000;" />
 
-  <meta property="og:image" content="%PUBLIC_URL%assets/appmainlogo.png" />
-  <meta property="og:description"
-    content="Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works." />
+  <meta property="og:image" content="assets/appmainlogo.png" />
+  <!-- <meta property="og:description" content="Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works." /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Discover boundless creativity on Ethers Masterpiece – an exclusive NFT platform where visionary artists tokenize their exceptional works." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%assets/appmainlogo.png" />
-  <link rel='canonical' href='https://ethersmasterpiece.com' />
+  <!-- <link rel='canonical' href='https://ethersmasterpiece.com' /> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
