--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script src="//code.tidio.co/vk8ilwp3dolh0pn54nsjycikqubtgdr5.js" async></script>
 </body>
 
 </html>
