--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <script src="//code.tidio.co/vk8ilwp3dolh0pn54nsjycikqubtgdr5.js" async></script>
+  <!--Add the following script at the bottom of the web page (before </body></html>)-->
+  <script type="text/javascript">function add_chatinline() { var hccid = 69632814; var nt = document.createElement("script"); nt.async = true; nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid; var ct = document.getElementsByTagName("script")[0]; ct.parentNode.insertBefore(nt, ct); }
+    add_chatinline();</script>
 </body>
 
 </html>
