--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!--Add the following script at the bottom of the web page (before </body></html>)-->
-  <script type="text/javascript">function add_chatinline() { var hccid = 69632814; var nt = document.createElement("script"); nt.async = true; nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid; var ct = document.getElementsByTagName("script")[0]; ct.parentNode.insertBefore(nt, ct); }
-    add_chatinline();</script>
+  <!-- Begin of Chaport Live Chat code -->
+  <script type="text/javascript">
+    (function (w, d, v3) {
+      w.chaportConfig = {
+        appId: '663e114d3a8d8bb1d6b64ddc'
+      };
+
+      if (w.chaport) return; v3 = w.chaport = {}; v3._q = []; v3._l = {}; v3.q = function () { v3._q.push(arguments) }; v3.on = function (e, fn) { if (!v3._l[e]) v3._l[e] = []; v3._l[e].push(fn) }; var s = d.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'https://app.chaport.com/javascripts/insert.js'; var ss = d.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss)
+    })(window, document);
+  </script>
+  <!-- End of Chaport Live Chat code -->
 </body>
 
 </html>
