--- a/public/index.html
+++ b/public/index.html
@@ -45,19 +45,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
- <!--Start of Tawk.to Script-->
+ <!-- Start of LiveAgent integration script: Chat button: Circle animated button 79 -->
 <script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6685c7549d7f358570d6bc94/1i1t958lk';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
+(function(d, src, c) { var t=d.scripts[d.scripts.length - 1],s=d.createElement('script');s.id='la_x2s6df8d';s.defer=true;s.src=src;s.onload=s.onreadystatechange=function(){var rs=this.readyState;if(rs&&(rs!='complete')&&(rs!='loaded')){return;}c(this);};t.parentElement.insertBefore(s,t.nextSibling);})(document,
+'https://ethersmasterpiece.ladesk.com/scripts/track.js',
+function(e){ LiveAgent.createButton('qejup7po', e); });
 </script>
-<!--End of Tawk.to Script-->
+<!-- End of LiveAgent integration script -->
 </body>
 
 </html>
