--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
- <!-- Start of LiveAgent integration script: Chat button: Circle animated button 79 -->
+<!-- Start of LiveAgent integration script: Invitations -->
 <script type="text/javascript">
 (function(d, src, c) { var t=d.scripts[d.scripts.length - 1],s=d.createElement('script');s.id='la_x2s6df8d';s.defer=true;s.src=src;s.onload=s.onreadystatechange=function(){var rs=this.readyState;if(rs&&(rs!='complete')&&(rs!='loaded')){return;}c(this);};t.parentElement.insertBefore(s,t.nextSibling);})(document,
 'https://ethersmasterpiece.ladesk.com/scripts/track.js',
-function(e){ LiveAgent.createButton('qejup7po', e); });
+function(e){  });
 </script>
 <!-- End of LiveAgent integration script -->
 </body>
